dead links updated
Le commencement --> lien article millavois

--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -8,8 +8,7 @@
     <meta name="description" content="Voyages dans le temps - Création la compagnie Mesdames A, compagnie de théâtre contemporain basée à Toulouse. Dirigée par Alice Tabart.">
     <meta name="author" content="Alice Tabart, Gilles Tabart">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="mesdames a, pièce, théâtre, theatre, contemporain, spectacle, art, Toulouse, Alice Tabart, Tabart, spectacle, chant, danse, compagnie, troupe">
-    <meta name="theme-color" content="#000000">
+    <meta name="keywords" content="sorcières, histoire, folklore, animations, spectacle vivant, divertissement, Moyen-Âge, Château, cité médiévale, Séverac, Aveyron, été, historique, pédagogique, comédiens, comédiennes, troubadours, banquets, mesdames a, théâtre, theatre, rue, spectacle, art, Alice Tabart, chant, danse, compagnie">
     <title>Voyages dans le temps - Mesdames A</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
