updates nov 2023 suite

--- a/creations/monologue/index.html
+++ b/creations/monologue/index.html
@@ -91,9 +91,9 @@
                         <h1>Le Monologue d'une Tueuse</h1>
                         <p><small>Saison 2010-2011</small></p>
                         <!--Video-->
-                        <div class="embed-responsive embed-responsive-16by9">
+                   <!--      <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/182462293"></iframe>
-                        </div>
+                        </div> -->
                         <p>
                             <i><br>Le Monologue d'une Tueuse</i>, sous titré « Apologie d'un acte », est une pièce écrite en réaction à la représentation parfois assez basique des tueurs dans les séries télévisées ou au cinéma.
                             <br> Face à ces représentations éloignées du réel profil des tueurs en série, cette pièce met en scène la figure fantasmée d'un personnage criminel à la fois plausible, fort et rebelle : <b>une tueuse</b>.
@@ -151,9 +151,8 @@
                         </p>
                         <h2>Production</h2>
                         <p class="production">
-                            Une production de la compagnie Mesdames A. <br>
-                            Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-monologue-tueuse.pdf">dossier de communication</a>
-                        </p>
+                            <p>Une production de la Compagnie <a href="https://mesdames-a.fr">Mesdames A</a> en partenariat avec le Théâtre du Fil à Plomb.</p>
+                            <!-- Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-monologue-tueuse.pdf">dossier de communication</a>-->
                         <h2>Revue de presse</h2>
                         <p class="RevueDePresse">
                             <div id="galRPdragons">
@@ -182,6 +181,12 @@
                                 <br>
                                 <li><b>2010</b></li>
                                 <li>- 3 et 4 décembre: Café théâtre - Le Burgaud </li>
+                                <div>
+                                    
+                            <a href="media/images/Affiche_Monologue_.jpg" title="Le Monologue d'une Tueuse - Affiche" data-gallery="#blueimp-gallery-galmonologue" data-toggle="lightbox">
+                                <img class="img-thumbnail" src="media/images/sm_Affiche_Monologue_.jpg" alt="Le Monologue d'une Tueuse - Danse">
+                            </a>
+                                </div>
                             </ul>
                         </div>
                         <!-- </div> -->
@@ -215,6 +220,8 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+
 <script src="./../../js/jquery.blueimp-gallery.min.js"></script>
 <!-- Scrolling Nav JavaScript -->
 <!--scrolling-nav.js-->
