--- a/creations/dragons/index.html
+++ b/creations/dragons/index.html
@@ -107,41 +107,42 @@
                         </p>
                         <h2>Production</h2>
                         <p class="production">
-                            Ce spectacle est créé avec le soutien du Conseil Départemental de l'Aveyron (aide à la résidence).
-                            <br> Nous remercions l'Ecole de Danse Virginie Gonzales ainsi que l'association Sévérac-Vidéo-Son.
-                            <h2>Revue de presse</h2>
-                            <br>
-                            <div id="galRPdragons">
-                                <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/depeche-dragons-2016.jpg" title="La Dépêche 25-08-2016"><img src="media/images/revue-presse/depeche-dragons-2016.jpg" alt="La Dépêche 25-08-2016" width="130"></a>
-                                <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/dragon1aout2015.jpg" title="La Dépêche 25-08-2016"><img src="media/images/revue-presse/dragon1aout2015.jpg" alt="Midi Libre" width="130"></a>
-                                <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/la-depeche-17-aout-2015-dragons.jpg" title="La Dépêche - 17/08/2015"><img src="media/images/revue-presse/la-depeche-17-aout-2015-dragons.jpg" alt="La Dépêche - 2015" width="130"></a>
-                            </div>
-                            <script>
-                            blueimp.Gallery(
-                                document.getElementById('galdragons').getElementsByTagName('a'), {
-                                    container: '#blueimp-gallery-carousel',
-                                    carousel: true
-                                }
-                            );
-                            </script>
-                            <h2>Dates</h2>
-                            <div class="dates-passees">
-                                <ul>
-                                    <li><b>2018</b></li>
-                                    <li>- lundis 16 et 23 juillet / Sévérac le Château</li>
-                                    <li>- lundis 13 et 20 août / Sévérac le Château</li>
-                                    <li><b>2017</b></li>
-                                    <li>- 2 lundis en juillet / Sévérac le Château</li>
-                                    <li>- 2 lundis en août / Sévérac le Château</li>
-                                    <li><b>2016</b></li>
-                                    <li>- lundis 18 et 25 juillet / Sévérac le Château</li>
-                                    <li>- lundis 8 et 22 août / Sévérac le Château</li>
-                                    <li><b>2015</b></li>
-                                    <li>- lundi 20 juillet/ Sévérac le Château</li>
-                                    <li>- lundis 3, 17 et 24 août / Sévérac le Château</li>
-                                </ul>
-                            </div>
-                            <!-- <div id="revue-presse-dragons-modal-lg" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="RevueDePresse" aria-hidden="false">
+                            Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a>, avec le soutien du Conseil Départemental de l'Aveyron (aide à la résidence).<br>
+                            Nous remercions l'Ecole de Danse Virginie Gonzales ainsi que l'association Sévérac-Vidéo-Son.
+                        </p>
+                        <h2>Revue de presse</h2>
+                        <br>
+                        <div id="galRPdragons">
+                            <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/depeche-dragons-2016.jpg" title="La Dépêche 25-08-2016"><img src="media/images/revue-presse/depeche-dragons-2016.jpg" alt="La Dépêche 25-08-2016" width="130"></a>
+                            <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/dragon1aout2015.jpg" title="La Dépêche 25-08-2016"><img src="media/images/revue-presse/dragon1aout2015.jpg" alt="Midi Libre" width="130"></a>
+                            <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/la-depeche-17-aout-2015-dragons.jpg" title="La Dépêche - 17/08/2015"><img src="media/images/revue-presse/la-depeche-17-aout-2015-dragons.jpg" alt="La Dépêche - 2015" width="130"></a>
+                        </div>
+                        <script>
+                        blueimp.Gallery(
+                            document.getElementById('galdragons').getElementsByTagName('a'), {
+                                container: '#blueimp-gallery-carousel',
+                                carousel: true
+                            }
+                        );
+                        </script>
+                        <h2>Dates</h2>
+                        <div class="dates-passees">
+                            <ul>
+                                <li><b>2018</b></li>
+                                <li>- lundis 16 et 23 juillet / Sévérac le Château</li>
+                                <li>- lundis 13 et 20 août / Sévérac le Château</li>
+                                <li><b>2017</b></li>
+                                <li>- 2 lundis en juillet / Sévérac le Château</li>
+                                <li>- 2 lundis en août / Sévérac le Château</li>
+                                <li><b>2016</b></li>
+                                <li>- lundis 18 et 25 juillet / Sévérac le Château</li>
+                                <li>- lundis 8 et 22 août / Sévérac le Château</li>
+                                <li><b>2015</b></li>
+                                <li>- lundi 20 juillet/ Sévérac le Château</li>
+                                <li>- lundis 3, 17 et 24 août / Sévérac le Château</li>
+                            </ul>
+                        </div>
+                        <!-- <div id="revue-presse-dragons-modal-lg" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="RevueDePresse" aria-hidden="false">
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -263,7 +264,7 @@ $(window).scroll(function() {
 
 //jQuery to collapse the navbar on click
 $('.navbar-nav>li>a').on('click', function() {
-$('.navbar-collapse').collapse('hide');
+    $('.navbar-collapse').collapse('hide');
 });
 
 //jQuery for page scrolling feature - requires jQuery Easing plugin
