--- a/creations/monologue/index.html
+++ b/creations/monologue/index.html
@@ -151,7 +151,7 @@
                         </p>
                         <h2>Production</h2>
                         <p class="production">
-                            <p>Une production de la Compagnie <a href="https://mesdames-a.fr">Mesdames A</a> en partenariat avec le Théâtre du Fil à Plomb.</p>
+                            <p>Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a> en partenariat avec le Théâtre du Fil à Plomb.</p>
                             <!-- Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-monologue-tueuse.pdf">dossier de communication</a>-->
                         <h2>Revue de presse</h2>
                         <p class="RevueDePresse">
