--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -200,8 +200,8 @@
                             -->
                         <h2>Production</h2>
                         <p class="production">
-                            Une production de la compagnie Mesdames A. <br>
-                            Retrouvez tous les détails et des avis du public dans le <a href="media/PDF/depliant-v5.pdf">dossier de communication</a>
+                            Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a> en partenariat avec La Commune de Sévérac d'Aveyron et le soutien de la DRAC (Été Culturel).
+                            <!-- Retrouvez tous les détails et des avis du public dans le <a href="media/PDF/depliant-v5.pdf">dossier de communication</a> -->
                         </p>
                         <!--<h2>Revue de presse</h2>
                         <p class="RevueDePresse">
