--- a/index.html
+++ b/index.html
@@ -167,10 +167,44 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Créations</h1>
+                    <!--CROMWELL-->
+                    <div class="hidden creations cromwell" id="cromwell">
+                        <h2><i>CROMWELL</i></h2>
+     <!--                    <p>
+                            <br><small>théâtre-concert-danse</small>
+                        </p> -->
+                        <p>
+                            <small><i>Été 2024</i><br>
+                            <i>(production en cours)</i></small><br>
+                            <br>
+                            Une production de la Cie Mesdames A, en partenariat avec le club dramatique, le Théâtre du Rocher et MégaSuperThéâtre.<br>
+                            Spectacle co-produit par la Commune de Sévérac d'Aveyron, le Théâtre Jules Julien et le Théâtre du Grand Rond et en partenariat avec :
+                            <ul>
+                                <li>Théâtre de la Cité - CDN de Toulouse,</li>
+                                <li>Centre Culturel Bonnefoy,</li>
+                                <li>Centre Culturel de la Brique Rouge,</li>
+                                <li>Centre Culturel des Mazades,</li>
+                                <li>Cave Poésie,</li>
+                                <li>Université Toulouse 2 - Jean Jaurès et</li>
+                                <li>RAVIV-Réseau des Arts vivants.</li>
+                            </ul>
+                        </p>
+                    </div>
+                    <!-- Le Commencement -->
+                    <div class="hidden creations commencement" id="commencement">
+                        <h2><i>Le Commencement</i></h2>
+                        <p><small>Saisons 2022/23 et 2023/24</small><br>
+                            <!-- <small>théâtre-concert-danse</small> -->
+                        </p>
+                        <p>
+                            Une production de la Compagnie Mesdames A avec le soutien de la Commune de Sévérac d’Aveyron (résidence de Territoire et diffusion), du Collège Jean D'Alembert (médiation), de l'Espace Archéologique Départemental de Montrozier (résidence et diffusion), du Conseil Départemental de l'Aveyron (subvention dans le cadre du dispositif "Partenariat avec les structures culturelles et les territoires") et de l'Association d'entraide sociale et populaire de Saint Sernin les Mailhoc (accueil en résidence).<br>
+                            La Compagnie a bénéficié du fond de soutien du Département de la Haute-Garonne ainsi que du dispositif de relance OCCAL du Conseil Régional de l’Occitanie. 
+                        </p>
+                    </div>
                     <!--ECLAIRS-->
                     <div class="creations eclairs" id="eclairs">
                         <h2><i class="fas fa-bolt" style="color: #f33128;" aria-hidden="true"></i> ÉCLAIRS <i class="fas fa-bolt" aria-hidden="true" style="color: #f33128;"></i></h2>
-                        <p><small>Saison 2018-2019 and 2019-2020</small><br>
+                        <p><small>Saison 2018/19 et 2019/20</small><br>
                             <small>théâtre-concert-danse</small></p>
                         <div class="ratio ratio-16x9">
                             <iframe src="https://player.vimeo.com/video/325242505"" title=" ÉCLAIRS"></iframe>
@@ -268,17 +302,18 @@
                         </p>
                         <h3>Production</h3>
                         <p class="production">
-                            Une production de la Compagnie Mesdames A avec le soutien de Tarbes en scène, du Théâtre du Ring, de La Mairie de Toulouse (aide au projet), de la Commune de Sévérac d'Aveyron, du Conseil Départemental de la Haute-Garonne (aide à la création) et du Conseil Régional de l’Occitanie (aide à la création et Égalité H/F). Ainsi que le soutien de la SPEDIDAM (aide à la à la création de spectacle dramatique et de la bande originale) et de la Fondation Empanda.
+                            Une production de la Compagnie Mesdames A avec le soutien de Tarbes en scène, du Théâtre du Ring, de La Mairie de Toulouse (aide au projet), de la Commune de Sévérac d’Aveyron, de la SPEDIDAM, de la Fondation Empanda, du Conseil Départemental de la Haute-Garonne (aide à la création) et du Conseil Régional de l’Occitanie (aide à la création et appel à projet Egalité F/H).<br>
+                            Nous remercions également le Théâtre Jules Julien, la MJC des Ponts Jumeaux et la MJC Empalot.
                             <br>
                             <br> Plus de details sur l’équipe et la production dans:
                             <br>
                             <ul class="production">
-                                <!--<li>la <a data-bs-toggle="modal" href="#revue-presse-eclairs-modal-lg">Revue de presse</a></li>-->
                                 <li>le <a href="creations/eclairs/media/PDF/dossier-ECLAIRS-cie-mesdames-a.pdf">Dossier de communication</a>
                                 </li>
                                 <li>la <a data-bs-toggle="modal" href="#modal-dates-eclairs">liste des dates</a></li>
                             </ul>
-                            <!--
+                        </p>
+                        <!--
                                 <div id="revue-presse-eclairs-modal-lg" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="RevueDePresse" aria-hidden="false">
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content bg-dark text-white">
@@ -326,32 +361,31 @@
                                 });
                                 </script>
                                 -->
-                            <!-- Modal dates passees -->
-                            <div id="modal-dates-eclairs" class="modal fade" role="dialog">
-                                <div class="modal-dialog">
-                                    <!-- Modal content-->
-                                    <div class="modal-content bg-dark text-white">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Dates - <i>ÉCLAIRS</i></h4>
-                                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
-                                        </div>
-                                        <div class="modal-body dates-passees">
-                                            <ul>
-                                                <li><b>2018</b></li>
-                                                <li>- 09 au 14 octobre, Le Pari, Tarbes (81)</li>
-                                                <li>- 27 octobre, Lapanouse (12)</li>
-                                                <li>- 08 décembre, Villasavary (11)</li>
-                                                <li><b>2019</b></li>
-                                                <li>- 25 janvier, Escalquens (31)</li>
-                                                <li>- 11 au 13 avril, Le Ring, Toulouse (31)</li>
-                                                <li>- 02 novembre, Labastide Saint Sernin (31)</li>
-                                                <li>- 30 novembre, Villasavary (11)</li>
-                                            </ul>
-                                        </div>
+                        <!-- Modal dates passees -->
+                        <div id="modal-dates-eclairs" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+                                <!-- Modal content-->
+                                <div class="modal-content bg-dark text-white">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Dates - <i>ÉCLAIRS</i></h4>
+                                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                                    </div>
+                                    <div class="modal-body dates-passees">
+                                        <ul>
+                                            <li><b>2018</b></li>
+                                            <li>- 09 au 14 octobre, Le Pari, Tarbes (81)</li>
+                                            <li>- 27 octobre, Lapanouse (12)</li>
+                                            <li>- 08 décembre, Villasavary (11)</li>
+                                            <li><b>2019</b></li>
+                                            <li>- 25 janvier, Escalquens (31)</li>
+                                            <li>- 11 au 13 avril, Le Ring, Toulouse (31)</li>
+                                            <li>- 02 novembre, Labastide Saint Sernin (31)</li>
+                                            <li>- 30 novembre, Villasavary (11)</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
-                        </p>
+                        </div>
                     </div>
                     <br>
                     <hr>
@@ -359,7 +393,7 @@
                     <!--SPECTATEUR>-->
                     <div class="creations spectateurs" id="spectateurs">
                         <h2>Spectateur(s) - un accident de théâtre</h2>
-                        <p><small>Saisons 2014-2015 et 2015-2016</small></p>
+                        <p><small>Saisons 2014/15 et 2015/16</small></p>
                         <div class="ratio ratio-16x9">
                             <iframe src="https://player.vimeo.com/video/119352016" title="Spectateur(s) - un accident de théâtre"></iframe>
                         </div>
@@ -460,7 +494,7 @@
                             </p>
                             <h3>Production</h3>
                             <p class="production">
-                                Une production de la compagnie Mesdames A, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.
+                                Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a>, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.
                                 <br>
                                 <br> Encore plus de détails avec&nbsp;:
                                 <br>
@@ -1048,9 +1082,10 @@
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Contact</h1>
                     <!-- <div> -->
-                    <p>
-                        <i class="fas fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;cie.mesdames.a <i class="fas fa-at"></i>&nbsp;gmail.com</p>
-                        <h2>Siège et statuts</h2>
+                    <p><b><i class="fas fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;E-mail</b></p>
+                       <p> cie.mesdames.a <i class="fas fa-at"></i>&nbsp;gmail.com</p><br>
+
+                    <!-- <h2>Siège et statuts</h2> -->
                     <div class="row">
                         <div class="col-sm-12 col-md-6">
                             <p class="align-text-top"><b>Siège</b></p>
@@ -1069,6 +1104,7 @@
                             </address>
                         </div>
                     </div>
+                    <br>
                     <p>
                         <i class="fas fa-file-pdf">&nbsp;</i><a href="media/pdf/statuts1901-mesdames-a.pdf">Statuts (association - loi 1901)</a><br>
                         No&nbsp;licence&nbsp;entrepreneur&nbsp;:&nbsp;n°&nbsp;2-1107142&nbsp;<br>
