--- a/creations/satyre/index.html
+++ b/creations/satyre/index.html
@@ -135,10 +135,10 @@
                         </div>
                         <div class="col-auto col-md-4 col-xl-3 mx-auto">
                             <a data-gallery="#blueimp-gallery-galsatyre" data-toggle="lightbox" href="media/images/CIE_MESDAMES_A_2012_Satyre_Poursuite.jpg" title="Le Satyre - Poursuite" class="text-white">
-                                <img src="media/images/affiche-satyre.jpg" alt="Satyre Affiche" class="img-fluid affiche-satyre"></a>   
+                                <img src="media/images/affiche-satyre.jpg" alt="Satyre Affiche" class="img-fluid affiche-satyre">
+                            </a>
                         </div>
                     </div>
-                    </a>
                     <h2>Revue de presse</h2>
                     <p class="RevueDePresse">
                         <div id="galRPsatyre">
@@ -163,7 +163,6 @@
                     </p>
                 </div>
             </div>
-        </div>
         </div>
     </section>
     <footer>
