--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -75,6 +75,7 @@
                                     Cette pièce raconte la préparation et l'atterrissage sur Terre d'un groupe d'humain.e.s du futur jusqu'alors rescapés dans l'espace et ayant perdu tout souvenir de son passé. Le public est entraîné par deux archéologues qui se donnent pour mission de retrouver l'origine de l'humanité. L'une est une scientifique, la deuxième est spécialisée dans l'interprétation des mythes des origines. Et c'est là tout ce qu'il leur reste des fictions terrestres.</p>
                                 <p>
                                     Le public est conduit dans 4 espaces scénographiés, dans lesquels le dessin, les vols aériens et la musique en direct viennent augmenter l'expérience théâtrale.</p>
+                                <p class="text-end"><b><i>Durée 1h20</i></b></p>
                             </div>
                         </div>
                     </div>
@@ -89,7 +90,6 @@
                         <a data-gallery="#blueimp-gallery-galcommencement" data-toggle="lightbox" href="media/images/01-commencement-xl-jmsahuquet.jpg" title="Le Commencement - Vue ensemble" class="text-white">
                             <img src="media/images/01-commencement-sm-jmsahuquet.jpg" alt="Le Commencement - Vue ensemble" width="24%" class="img-thumbnail">
                         </a>
-                        
                         <a data-gallery="#blueimp-gallery-galcommencement" data-toggle="lightbox" href="media/images/03-commencement-xl-juliemachu.jpg" title="Le Commencement - Ruines">
                             <img src="media/images/03-commencement-sm-juliemachu.jpg" alt="Le Commencement - Ruines" width="24%" class="img-thumbnail">
                         </a>
@@ -110,15 +110,29 @@
                         <div class="col-xxl-6">
                             <h2>Équipe de création</h2>
                             <p class="equip-crea">
-                                <span class="label-equipe-crea">Mise en scène &amp; costumes /</span> Alice Tabart
+                                <span class="label-equipe-crea">Écriture et mise en scène /</span> Alice Tabart
                                 <br>
-                                <span class="label-equipe-crea">Interprétation /</span> Coline Lubin &amp;
+                                <span class="label-equipe-crea">Collaboration à l'écriture /</span> Victor Ginicis
                                 <br>
-                                <span class="label-equipe-crea">Création musicale /</span>
+                                <span class="label-equipe-crea">Création lumière /</span> Théo Roumier
                                 <br>
-                                <span class="label-equipe-crea">Stagiaire /</span>
+                                <span class="label-equipe-crea">Régie Plateau /</span> Laurent Lhermite
                                 <br>
-                                <span class="label-equipe-crea">Création affiche /</span>
+                                <span class="label-equipe-crea">Installations aériennes /</span> Arnaud Delheure
+                                <br>
+                                <span class="label-equipe-crea">Costumes et accessoires /</span> Camille Bouvier
+                                <br>
+                                <span class="label-equipe-crea">Interprétation /</span> Coline Lubin, Léa Cuny-Bret, Raphaël Jamin &amp; Alice Tabart
+                                <br>
+                                <span class="label-equipe-crea">Peinture /</span> Louidela Nutakor (JustLoui)
+                                <br>
+                                <span class="label-equipe-crea">Composition musicale /</span> Raphaël Jamin
+                                <br>
+                                <span class="label-equipe-crea">Assistante à la mise en scène /</span> Sarah Piccoli
+                                <br>
+                                <span class="label-equipe-crea">Chargée de production et d'administration /</span> Mathilde Ratajczyk
+                                <br>
+                                <span class="label-equipe-crea">Chargée de diffusion /</span> Léa Cuny-Bret
                                 <br>
                             </p>
                         </div>
