--- a/index.html
+++ b/index.html
@@ -1079,8 +1079,8 @@
                             <p class="align-text-top"><b>Siège</b></p>
                             <address>
                                 <p>Compagnie Mesdames A<br>
-                                    17, rue Jean Pascal<br>
-                                    31620 Labastide-Saint-Sernin, France</p>
+                                    59 chemin de Lapujade<br>
+                                    31200 Toulouse, France</p>
                             </address>
                         </div>
                         <div class="col-sm-12 col-md-6 align-baseline">
@@ -1095,8 +1095,9 @@
                     <br>
                     <p>
                         <i class="fas fa-file-pdf">&nbsp;</i><a href="media/pdf/statuts1901-mesdames-a.pdf">Statuts (association - loi 1901)</a><br>
-                        No&nbsp;licence&nbsp;entrepreneur&nbsp;:&nbsp;n°&nbsp;2-1107142&nbsp;<br>
-                        No&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;00017<br><br>
+                        APE&nbsp;:&nbsp;9001Z<br>
+                        N°&nbsp;licence&nbsp;entrepreneur&nbsp;:&nbsp;n°&nbsp;L-R-21-13672&nbsp;<br>
+                        N°&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;000&nbsp;33<br><br>
                     </p>
                     <!-- Vous pouvez nous contacter&nbsp;: -->
                     <!-- <ul class="production">
